@@ -10,8 +10,7 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>313</integer>
-		<integer>374</integer>
+		<integer>839</integer>
 		<integer>327</integer>
 	</array>
 	<key>IBSystem Version</key>
