@@ -1,5 +1,10 @@
 2008-03-07  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed logic to calculate nick color numbers.
+	Changed a menu item from 'Mark All as Read and Clear All Marks' to 'Mark All as Read and Mark All Scrollbacks'.
+
+2008-03-07  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed the note on the server properties dialog.
 
 2008-03-06  Satoshi Nakagawa <artension@gmail.com>
